argocd/manifests/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: default
  hostnames:
    - "immich.pitpe.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283 # HTTPの場合。HTTPSバックエンドなら443
